--- a/CPP_Template.vcxproj.filters
+++ b/CPP_Template.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
